# gen3-metadata-simulator

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
docs/: architecture.md  dev-notes.md  plan.md  usage.md
examples/jsonschema/: acdc_schema_v1.1.5.json
src/gen3_metadata_simulator/: __init__.py  cli.py  config.py  errors.py  generator.py  links.py  ordering.py  registry.py  schema.py  validation.py  writers.py
src/gen3_metadata_simulator/providers/: __init__.py  base.py  classify.py  dates.py  llm_provider.py  random_provider.py  specs.py
tests/: conftest.py  test_classify.py  test_config.py  test_dates.py  test_generator.py  test_links.py  test_llm_provider.py  test_logging.py  test_ordering.py  test_providers.py  test_roundtrip.py  test_roundtrip_llm.py  test_schema.py  test_specs.py  test_writers.py
