[project]
name = "gen3-metadata-simulator"
version = "0.2.0"
description = "Simulate linked Gen3 metadata JSON files from a bundled Gen3 JSON schema"
authors = [{ name = "Joshua Harris" }]
readme = "README.md"
requires-python = ">=3.9.5,<4.0"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "gen3-validator (>=2.0.1,<3.0.0)",
    "typer (>=0.12,<1.0)",
    "rstr (>=3.2.2,<4.0.0)",
    "anthropic (>=0.69,<1.0)",
    "python-dotenv (>=1.0,<2.0)",
    "pydantic (>=2.0,<3.0)",
    "openai (>=1.92,<2)",
]

[project.scripts]
gen3-metadata-simulator = "gen3_metadata_simulator.cli:app"

[tool.poetry]
packages = [{ include = "gen3_metadata_simulator", from = "src" }]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
